# toolbox

./: .gitignore  README.md  pyproject.toml
tests/: labs.py  test_fs_tools.py  test_math_problems.py  test_shell_tools.py  test_subtitles_tools.py
toolbox/fs/: __init__.py
toolbox/functional/: __init__.py
toolbox/geometry/: __init__.py
toolbox/git/: __init__.py
toolbox/github/: __init__.py
toolbox/huggingface/: __init__.py
toolbox/images/: __init__.py
toolbox/learning/: math_problem_generators.py
toolbox/markdown/: __init__.py
toolbox/network/: __init__.py
toolbox/optics/: math.py
toolbox/scripts/: generate-folder-toc.py  new-file.py  pip-in-local.py  retry-cmd.py  split-wav.py
toolbox/scripts/subtitles/: ass-break-line.py
toolbox/shell/: __init__.py
toolbox/strings/: __init__.py
toolbox/subtitles/: __init__.py
toolbox/terminals/: __init__.py
toolbox/win32/: __init__.py
