[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = "toolbox by chatgpt"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysrt = "^1.1.2"
mistune = "^2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
